--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
+asttokens==3.0.0
+decorator==5.2.1
+exceptiongroup==1.3.0
+executing==2.2.0
+ipython==8.37.0
+jedi==0.19.2
 linkify-it-py==2.0.3
 markdown-it-py==3.0.0
+matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
+parso==0.8.4
+pexpect==4.9.0
 platformdirs==4.3.8
+prompt_toolkit==3.0.51
+ptyprocess==0.7.0
+pure_eval==0.2.3
 Pygments==2.19.2
 rich==14.0.0
+stack-data==0.6.3
 textual==3.7.1
+traitlets==5.14.3
+typing==3.7.4.3
 typing_extensions==4.14.1
 uc-micro-py==1.0.3
+wcwidth==0.2.13
